--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -161,7 +161,7 @@
                 <div class="uk-flex" style="margin-top: 5%">
                     {% csrf_token %}
                     <button class="uk-button uk-button-default uk-margin-small-right" name="decline" value="{{product.id}}" style="background: #969696; border-radius: 5px;" type="submit">Отказаться</button>
-                    <button class="uk-button uk-button-default uk-margin-small-right" style="background: #969696; border-radius: 5px;" type="submit">Чат</button>
+                    <button class="uk-button uk-button-default uk-margin-small-right" style="background: #969696; border-radius: 5px;" type="button">Чат</button>
                 </div>
                 <div id="modal-close-default" uk-modal>
                     <div class="uk-modal-dialog uk-modal-body">
