--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -1,97 +1,62 @@
-<div class="d-flex flex-row" id="product_creator">
-    <h1 style="margin: auto">Мои товары</h1>
 
-    <a class="btn btn-primary Btnn" role="button" style="margin: auto">Создать товар</a>
-</div>
-<div class="card">
+<div class="card" id="product_creator">
     <div class="card-body">
         <!-- Grid row -->
         <div class="row">
             <!-- Grid column -->
-            <div class="col-md-12">
-                <h2 class="py-3 text-center font-bold font-up blue-text">Мои товары</h2>
+            <div class="uk-width-1 uk-text-center">
+                <h1 class="">Мои товары</h1>
+                <a class="uk-button uk-button-primary uk-border-rounded Btnn" role="button" style="margin: auto">Создать товар</a>
             </div>
             <!-- Grid column -->
         </div>
         <!-- Grid row -->
         <!--Table-->
-        <table class="table table-hover table-responsive mb-0">
+        <table class="uk-table uk-table-divider">
             <!--Table head-->
-               <thead>
+            <thead>
                 <tr>
-                    <th scope="row" class="th-lg">Название товара</th>
-                    <th class="th-lg">Бренд</th>
-                    <th class="th-lg">Цена</th>
-                    <th class="th-lg">Опубликовано</th>
-                    <th class="th-lg">Удалить</th>
+                    <th class="uk-text-left">Название товара</th>
+                    <th class="uk-text-left">Бренд</th>
+                    <th class="uk-text-left">Цена</th>
+                    <th class="uk-text-left">Опубликовано</th>
+                    <th class="uk-text-left">Удалить</th>
 
 
                 </tr>
             </thead>
-
             <!--Table head-->
             <!--Table body-->
-            <form method="GET" id="goodsList" action="/becomeCreator/" >
+            <form method="GET" id="goodsList" action="/becomeCreator/">
+
+
                 {% csrf_token %}
-                <tbody>
+                <tbody uk-sortable>
 
                     {% for product in products %}
-                    <tr>
-                        <th scope="row" class="uk-text-truncate">{{ product.product_name }}</th>
-                        <td>text</td>
-                        <td>{{ product.cost }}</td>
-                        <td>text</td>
-                        <td>
-                            <button name="delete" form="goodsList" value="{{product.id}}" href="" type="submit"
-                                 class="btn btn-outline-secondary"> X </button>
-                        </td>
-                    </tr>
+
+                        <tr>
+                            <td class="uk-text-truncate">{{ product.product_name }}</td>
+                            <td>text</td>
+                            <td>{{ product.cost }}</td>
+                            <td>text</td>
+                            <td class="uk-text-left">
+                                <button name="delete" form="goodsList" value="{{product.id}}" href="" type="submit"
+                                    class="uk-button uk-button-danger uk-border-rounded uk-text-large"> X </button>
+                            </td>
+                        </tr>
 
                     {% endfor %}
                 </tbody>
-
             </form>
+        </table>
 
 
 
 
-            <!--Table body-->
+        <!--Table body-->
 
         </table>
-        <!--Bottom Table UI-->
-        <div class="d-flex justify-content-center">
-            <!--Pagination -->
-            <nav class="my-4 pt-2">
-                <ul class="pagination pagination-circle pg-blue mb-0">
-                    <!--First-->
-                    <li class="page-item disabled clearfix d-none d-md-block"><a class="page-link">First</a></li>
-                    <!--Arrow left-->
-                    <li class="page-item disabled">
-                        <a class="page-link" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <!--Numbers-->
-                    <li class="page-item active"><a class="page-link">1</a></li>
-                    <li class="page-item"><a class="page-link">2</a></li>
-                    <li class="page-item"><a class="page-link">3</a></li>
-                    <li class="page-item"><a class="page-link">4</a></li>
-                    <li class="page-item"><a class="page-link">5</a></li>
-                    <!--Arrow right-->
-                    <li class="page-item">
-                        <a class="page-link" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                    <!--First-->
-                    <li class="page-item clearfix d-none d-md-block"><a class="page-link">Last</a></li>
-                </ul>
-            </nav>
-            <!--/Pagination -->
-        </div>
-        <!--Bottom Table UI-->
     </div>
 </div>
 
@@ -145,6 +110,7 @@
 <script>
     $('.Btnn').on('click', {}, function (inBody) {
         var xhr = new XMLHttpRequest()
+        localStorage.page=6
         xhr.open('GET', `becomeCreatorTemplates/6/`)
         xhr.onload = function () {
             $('#MainWindowContainer').html(xhr.response)
