--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -12,13 +12,13 @@
 <div class="placeOut uk-flex-column uk-margin-bottom">
     <h3>Заказы одобренные продавцом</h3>
         {% for product in products %}
-        {% if product.status1 == "in work"%}
+        {% if product.status == "Заказ в работе"%}
         <div style="margin-bottom: 10%">
             <div style="background-color: #D9D9D9 " >
                 <div style="margin-left: 5%;">
                     <br>
                     <p class="uk-margin-remove" style="margin-top: 5%">Заказ: # {{ product.id }}</p>
-                    <p class="uk-margin-remove">Статус: {{ product.status1 }}</p>
+                    <p class="uk-margin-remove">Статус: {{ product.status }}</p>
                     <p class="uk-margin-remove">Адрес доставки: улица пушкина дом колотушкина подъезд 6</p>
                     <br>
                 </div>
@@ -77,7 +77,7 @@
                         <div class="uk-flex">
                             <div>
                                 <p class="uk-margin-remove-bottom">Картой онлайн:</p>
-                                <p class="uk-margin-remove">Статус: {{ product.status1 }}</p>
+                                <p class="uk-margin-remove">Статус: {{ product.status }}</p>
                             </div>
                             <div class="uk-margin-left">
                                 <p class="uk-margin-remove-bottom">{{ product.price }}</p>
@@ -144,13 +144,13 @@
     <h4 style="margin-top: 10%">Заказы ожидающие одобренния продавца</h4>
     <form method="POST">
         {% for product in products %}
-            {% if product.status1 == "in waiting"%}
+            {% if product.status == "Заказ принят на рассмотрение"%}
                 <div class="uk-flex uk-margin-bottom" style="background: #C4C4C4; border: 10px solid #C4C4C4">
             <img src="https://cdn130.picsart.com/356259745047201.jpg" alt="" width="200px" style="border-radius: 5px">
             <div class="uk-flex-column uk-margin-medium-left uk-margin-small-bottom uk-margin-top">
                 <h3 style="margin-bottom: 10%">{{ product.id_user_buy }}</h3>
                 <div class="uk-flex uk-margin-remove" >
-                    <p class="uk-margin-remove">Статус: {{ product.status1 }}</p>
+                    <p class="uk-margin-remove">Статус: {{ product.status }}</p>
                     <p class="uk-margin-remove-top uk-margin-remove-bottom  uk-margin-left">Оплата: не оплачен</p>
                 </div>
 
