--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -109,6 +109,7 @@
                         </td>
                         <td class="uk-text-center">
                             <button name="decline" form="products_in_work_id" type="submit" value="{{product.id}}" class="uk-button uk-button-danger uk-width-1 uk-text-center uk-border-rounded">Отказаться</button>
+                            {{product.status}}
                         </td>
                         <td class="uk-text-center">
                             <button name="" form="products_in_work_id" type="button" class="uk-button uk-button-primary uk-border-rounded" href="#modal-overflow" uk-toggle>Посмотреть</button>
