add online database witj out migrations

--- a/partner/Part/templates/signin.html
+++ b/partner/Part/templates/signin.html
@@ -2,6 +2,12 @@
 <html>
 
 <head>
+
+    <p>--------------------</p>
+    <p>Text</p>
+    <p>--------------------</p>
+
+
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>BizOpt</title>
