--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -156,7 +156,7 @@
 
             </div>
             <div class="uk-flex-column uk-margin-top" style="margin-left: auto;">
-                <h3 style="text-align: center">{{ task.price }} 12000 руб</h3>
+                <h3 style="text-align: center">{{ product.price }} 12000 руб</h3>
                 <button class="uk-button uk-button-default uk-margin-small-right" style="background: #969696; border-radius: 5px; margin-left: 25%" type="button" uk-toggle="target: #modal-close-default">Оплатить заказ</button>
                 <div class="uk-flex" style="margin-top: 5%">
                     {% csrf_token %}
