--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -43,7 +43,7 @@
                 <form class="uk-search uk-search-default" style="width: 100%;">
                     <a class="uk-search-icon-flip" type="submit" id="searchBtn" uk-search-icon></a>
                     <input class="uk-search-input" type="search" placeholder="Search" id="search_pole"
-                        onchange="red(this)" style="width: 100%;">
+                        oninput="red(this)" style="width: 100%;">
                 </form>
             </ul>
 
