--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -100,11 +100,28 @@
                                 </select>
                             </div>
                             <div class="uk-flex uk-flex-center uk-align-center" style="margin-top: 20px">
-                                <button class="uk-button uk-button-primary uk-width-1-1 uk-border-rounded" id="registerBtn" disabled>Получить
+                                <button class="uk-button uk-button-primary uk-width-1-1 uk-border-rounded" id="registerBtn" type="button" uk-toggle="target: #modal-close-outside" disabled>Получить
                                     код</button>
                     </div>
+
+                        <div id="modal-close-outside" uk-modal>
+                            <div class="uk-modal-dialog uk-modal-body">
+                                <button class="uk-modal-close-outside" type="button" uk-close></button>
+                                <h2 class="uk-modal-title">Подтверждение</h2>
+                                <form method="POST" action="">
+                                    <p>На ваш номер телефона был отправлен шестизначный код,<br> введите его в поле ниже</p>
+                                    <input maxlength="6" class="uk-input uk-border-rounded" id="my-input" style="width: 50%;"
+                                           name="code" type="text" placeholder="000000" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" >
+                                    {% csrf_token %}
+                                    <p class="uk-text-right">
+                                        <button type='button' id="my-button" class="uk-button uk-button-primary uk-border-rounded" disabled >Отправить код</button>
+                                    </p>
+                                </form>
+                            </div>
+                        </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <section id="main">
@@ -321,7 +338,7 @@
                         <p class="uk-text-break uk-display-inline-block">мы еще не придумали((</p>
                     </div>
                 </div>
-
+                <div>
             </div>
         </div>
     </section>
@@ -330,6 +347,14 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
 <script>
+    var checkInput = (e) => {
+        const content = $("#my-input").val().length;
+        $('#my-button').prop('disabled', content === '');
+    };
+
+
+    $(document).on('keyup', '#my-input', checkInput);
+
     $(document).on('click', 'a[href^="#"]', function (event) {
         event.preventDefault();
 
@@ -425,9 +450,13 @@
         }
     };
 
+
+
     const inputElement = document.getElementById('phoneNumber');
     inputElement.addEventListener('keydown', enforceFormat);
     inputElement.addEventListener('keyup', formatToPhone);
+
+
 </script>
 
 </html>
